Hero image fit the entire background

--- a/sass/assets/styles/main.css
+++ b/sass/assets/styles/main.css
@@ -1,9 +1,11 @@
 body {
-  background-image: url("https://c1.staticflickr.com/5/4304/35646793470_751eecbfdd_h.jpg");
+  background: url("https://c1.staticflickr.com/5/4304/35646793470_751eecbfdd_h.jpg") no-repeat center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width: 100%;
+  height: 100vh;
   background-color: #eeffcc;
   font-size: 23px; }
 
